--- a/.travis.yml
+++ b/.travis.yml
@@ -6,20 +6,23 @@ language: cpp
 compiler: 
     - gcc
 
-matrix:
-    include:
-        os: linux
-        addons:
-            apt:
-                sources:
-                    -ubuntu-toolchain-r-test
-                packages:
-                    - g++-6
-        env:
-            MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
+#matrix:
+#    include:
+#        os: linux
+#        addons:
+#            apt:
+#                sources:
+#                    -ubuntu-toolchain-r-test
+#                packages:
+#                    - g++-6
+#        env:
+#            MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
 
 before_install:
-    - eval "${MATRIX_EVAL}"
+    - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+    - sudo apt-get -q update
+    - sudo apt-get -y install gcc-4.8
+#   - eval "${MATRIX_EVAL}"
 
 # Got rid of gtest, using catch2 now to avoid issue with 
 # Ubuntu's packaging. 
