--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ compiler:
 before_install:
     - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
     - sudo apt-get -q update
-    - sudo apt-get -y install gcc-4.8
+    - sudo apt-get -y install gcc-7 g++-7
 #   - eval "${MATRIX_EVAL}"
 
 # Got rid of gtest, using catch2 now to avoid issue with 
