Added script to run tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,4 @@ before_install:
 # Ubuntu's packaging on travis
 script:
     - make clean && make all
-    - ./bin/test/test_lexer
-    - ./bin/test/test_assembler
-    - ./bin/test/test_opcode
-    - ./bin/test/test_elf
+    - ./test/run_tests.sh
