Fixed run tests script to return failure code.
Actually since the number of tests here is small it might turn out to be
simpler just to put the tests back into .travis.yml directly and forget
about having a seperate run_tests.sh entirely.

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,7 @@ before_install:
 script:
     - make clean && make all
     - ./test/run_tests.sh
+      #- ./bin/test/test_lexer
+      #- ./bin/test/test_assembler
+      #- ./bin/test/test_opcode
+      #- ./bin/test/test_elf
