--- a/.travis.yml
+++ b/.travis.yml
@@ -29,3 +29,4 @@ script:
     - ./bin/test/test_disassembler
     - ./bin/test/test_register
     - ./bin/test/test_source
+    - ./bin/test/test_state
